--- a/lab-python-list-comprehension.ipynb
+++ b/lab-python-list-comprehension.ipynb
@@ -75,11 +75,257 @@
     "\n",
     "```\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "552d2bca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_inventory(products):\n",
+    "    inventory = {product: int(input(f\"Enter here the available quantity of {product}:\")) for product in products}\n",
+    "    return inventory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "b8e073c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_customer_orders():\n",
+    "    orders_number = int(input(\"Enter de number of orders you would like to do:\"))\n",
+    "    customer_orders = set()\n",
+    "    \n",
+    "    while orders_number > 0:\n",
+    "        order = input(\"Enter the product you want to order:\")\n",
+    "        customer_orders.add(order)\n",
+    "        orders_number -= 1\n",
+    "          \n",
+    "    print(\"You're order has been completed\")\n",
+    "    print(customer_orders)    \n",
+    "    return(customer_orders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "bfc55722",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_inventory(customer_orders, inventory):\n",
+    "    inventory[product] = [inventory[product - 1] for product in customer_orders if product in inventory]\n",
+    "    if product not in inventory:\n",
+    "            inventory.remove(product)\n",
+    "    return inventory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "07a01803",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_order_statistics(customer_orders, products):\n",
+    "    total_products_ordered = len(customer_orders)\n",
+    "    percentage_ordered = (total_products_ordered / len(products)) * 100\n",
+    "    return(total_products_ordered, percentage_ordered)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "930d6ef2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "order_statistics = calculate_order_statistics(customer_orders, products)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "8a2f733c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_order_statistics(order_statistics):\n",
+    "    print(\"Order statistics:\")\n",
+    "    print(f\"Total Products Ordered: {order_statistics[0]}\")\n",
+    "    print(f\"Percentage of Products Ordered: {order_statistics[1]}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "9e7c19b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_updated_inventory(inventory):\n",
+    "    print(\"Updated inventory:\")\n",
+    "    [print(f\"{product}: {quantity}\") for product, quantity in inventory.items()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "0cfb8966",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def calculate_total_price(customer_orders):\n",
+    "    price_list = [int(input(f\"Which is the price for {product}:\")) for product in customer_orders]\n",
+    "    total_price = sum(price_list)\n",
+    "    return(total_price)    \n",
+    "    \n",
+    "customer_orders = {'mug', 'book'}\n",
+    "calculate_total_price(customer_orders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "c84c0ff4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "products = [\"books\", \"hat\", \"mug\", \"chair\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "aedd1c2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You're order has been completed\n",
+      "{'book', 'mug'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "customer_orders = get_customer_orders()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "647ecd8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'books': 4, 'hat': 6, 'mug': 3, 'chair': 5}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "initialize_inventory(products)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "a511967b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inventory = initialize_inventory(products)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "788c2566",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 50.0)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_order_statistics(customer_orders, products)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "a4f986b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Order statistics:\n",
+      "Total Products Ordered: 2\n",
+      "Percentage of Products Ordered: 50.0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_order_statistics(order_statistics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "0779624f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'str' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[52], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m update_inventory(customer_orders, inventory)\n",
+      "Cell \u001b[1;32mIn[40], line 2\u001b[0m, in \u001b[0;36mupdate_inventory\u001b[1;34m(customer_orders, inventory)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mupdate_inventory\u001b[39m(customer_orders, inventory):\n\u001b[1;32m----> 2\u001b[0m     inventory[product] \u001b[38;5;241m=\u001b[39m [inventory[product \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m product \u001b[38;5;129;01min\u001b[39;00m customer_orders \u001b[38;5;28;01mif\u001b[39;00m product \u001b[38;5;129;01min\u001b[39;00m inventory]\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m product \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m inventory:\n\u001b[0;32m      4\u001b[0m             inventory\u001b[38;5;241m.\u001b[39mremove(product)\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "update_inventory(customer_orders, inventory)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -93,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
